<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HappyTrip</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="trip_name">Trip Name</string>
    <string name="place">Place</string>
    <string name="start_date">Start Date</string>
    <string name="members">Members</string>
    <string name="currency">Currency</string>
    <string name="expected_cost">Expected Expenditure</string>
    <string name="member_name">Member Name</string>
    <string name="member_mobile">Phone Number</string>
    <string name="member_email">Email</string>
    <string name="action_save">Save</string>
    <string name="action_update">Update</string>
    <string name="payer">Payer*</string>
    <string name="expense">Expense*</string>
    <string name="when">When</string>
    <string name="reason">Reason</string>
     <string name="where">Where</string>

</resources>